2021-12-10 Ephraim Härer <ephraim.haerer@renolit.com>
	* compatibility with TYPO3 11.5.x

2021-09-27 Ephraim Härer <ephraim.haerer@renolit.com>
	* Preparation for new release on packagist and typo3.org


2020-08-06 Achim Fritz <achim.fritz@b13.com>
	* compatibility with TYPO3 10


2018-02-16 Achim Fritz <af@lightwerk.com>
	* Preparation for 8.7 LTS


2017-01-16 Ephraim Härer <ephraim.haerer@renolit.com>
	* Preparation for 7.6 LTS


2009-05-30  Franz Holzinger  <franz@ttproducts.de>
	* Todo: Das Split muss verbessert werden, damit ein ',' auch innerhalb eines Wertes vorkommen kann
	* Löschen von static_taxes, wo es keine deutsche Übersetzung gegeben hat.
	* neue Länder Serbien und Montenegro


2006-12-19  Franz Holzinger  <kontakt@fholzinger.com>
	* enable the function to load additional TCA to allow fields added from the language specific static_info_tables derivates
	* Added a ChangeLog file