@@ -1,6 +1,6 @@
 # Static Info Tables (nl)
 
-(nl) Dutch language pack for the Static Info Tables providing localized names for countries, 
+(nl) Dutch language pack for the Static Info Tables providing localized names for countries,
 currencies and so on.
 
 Support:
@@ -11,9 +11,3 @@ https://github.com/Kephson/static_info_tables_nl/issues
 
 TYPO3 extension repository:
 https://extensions.typo3.org/extension/static_info_tables_nl
-
-## Installation and Usage
-
-More information on [introduction](Documentation/Introduction/Index.rst) 
-and [installation](Documentation/Installation/Index.rst) can be found in 
-the documentation folder.
