@@ -27,7 +27,11 @@ namespace SJBR\StaticInfoTablesNl;
  *  This copyright notice MUST APPEAR in all copies of the script!
  * ************************************************************* */
 
+use SJBR\StaticInfoTables\Cache\ClassCacheManager;
+use SJBR\StaticInfoTables\Utility\DatabaseUpdateUtility;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
+use TYPO3\CMS\Extbase\Object\Exception;
+use TYPO3\CMS\Extbase\Object\ObjectManager;
 use TYPO3\CMS\Extbase\Utility\LocalizationUtility;
 
 /**
@@ -36,32 +40,38 @@ use TYPO3\CMS\Extbase\Utility\LocalizationUtility;
 class ext_update
 {
 
+    public const EXTENSION_KEY = 'static_info_tables_nl';
+
     /**
      * Main function, returning the HTML content
      *
      * @return string HTML
+     * @throws Exception
      */
     public function main()
     {
         $content = '';
-        /** @var \TYPO3\CMS\Extbase\Object\ObjectManager $objectManager */
-        $objectManager = GeneralUtility::makeInstance('TYPO3\\CMS\\Extbase\\Object\\ObjectManager');
+        /** @var ObjectManager $objectManager */
+        $objectManager = GeneralUtility::makeInstance(ObjectManager::class);
 
         // Clear the class cache
-        /** @var \SJBR\StaticInfoTables\Cache\ClassCacheManager $classCacheManager */
-        $classCacheManager = $objectManager->get('SJBR\\StaticInfoTables\\Cache\\ClassCacheManager');
+        /** @var ClassCacheManager $classCacheManager */
+        $classCacheManager = $objectManager->get(ClassCacheManager::class);
         $classCacheManager->reBuild();
 
         // Update the database
-        /** @var \SJBR\StaticInfoTables\Utility\DatabaseUpdateUtility $databaseUpdateUtility */
-        $databaseUpdateUtility = $objectManager->get('SJBR\\StaticInfoTables\\Utility\\DatabaseUpdateUtility');
-        $databaseUpdateUtility->doUpdate('static_info_tables_nl');
+        /** @var DatabaseUpdateUtility $databaseUpdateUtility */
+        $databaseUpdateUtility = $objectManager->get(DatabaseUpdateUtility::class);
+        $databaseUpdateUtility->doUpdate(self::EXTENSION_KEY);
 
-        $content .= '<p>' . LocalizationUtility::translate('updateLanguageLabels',
-                'StaticInfoTables', ['static_info_tables_nl']) . '</p>';
+        $updateLanguageLabels = LocalizationUtility::translate('updateLanguageLabels', 'StaticInfoTables');
+        $content .= '<p>' . $updateLanguageLabels . ' ' . self::EXTENSION_KEY . '</p>';
         return $content;
     }
 
+    /**
+     * @return bool
+     */
     public function access()
     {
         return true;
