@@ -1,35 +1,40 @@
 {
-  "name": "renolit/static-info-tables-nl",
-  "type": "typo3-cms-extension",
-  "description": "Dutch (nl) language pack for the Static Info Tables providing localized names for countries, currencies and so on.",
-  "license": [
-    "GPL-2.0-or-later"
-  ],
-  "keywords": [
-    "TYPO3 CMS",
-    "Static Info Tables"
-  ],
-  "authors": [
-    {
-      "name": "Ephraim Härer",
-      "role": "Developer"
-    },
-    {
-      "name": "Timo Feuerstein",
-      "role": "Developer"
-    }
-  ],
-  "replace": {
-    "typo3-ter/static-info-tables-nl": "self.version"
-  },
-  "require": {
-    "php": ">=7.2",
-    "typo3/cms-core": "^9.5 || ^10.4 || ^11.5",
-    "sjbr/static-info-tables": "^6.9 || ^11.5"
-  },
-  "extra": {
-    "typo3/cms": {
-      "extension-key": "static_info_tables_nl"
-    }
-  }
+	"name": "renolit/static-info-tables-nl",
+	"type": "typo3-cms-extension",
+	"description": "Dutch (nl) language pack for the Static Info Tables providing localized names for countries, currencies and so on.",
+	"license": [
+		"GPL-2.0-or-later"
+	],
+	"keywords": [
+		"TYPO3 CMS",
+		"Static Info Tables"
+	],
+	"support": {
+		"issues": "https://github.com/Kephson/static_info_tables_nl/issues"
+	},
+	"authors": [
+		{
+			"name": "Ephraim Härer",
+			"role": "Developer"
+		},
+		{
+			"name": "Timo Feuerstein",
+			"role": "Developer"
+		}
+	],
+	"replace": {
+		"typo3-ter/static-info-tables-nl": "self.version"
+	},
+	"require": {
+		"php": "^7.2",
+		"typo3/cms-core": ">=11.5, <12.0",
+		"typo3/cms-extbase": ">=11.5, <12.0",
+		"typo3/cms-extensionmanager": ">=11.5, <12.0",
+		"sjbr/static-info-tables": "^11.5"
+	},
+	"extra": {
+		"typo3/cms": {
+			"extension-key": "static_info_tables_nl"
+		}
+	}
 }
