@@ -1,38 +1,33 @@
-<?php /** @noinspection PhpUndefinedVariableInspection */
-########################################################################
-# Extension Manager/Repository config file for ext "static_info_tables_nl".
-#
-# Manual updates:
-# Only the data in the array - everything else is removed by next
-# writing. "version" and "dependencies" must not be touched!
-########################################################################
+<?php
+/** @noinspection PhpUndefinedVariableInspection */
+
+/***************************************************************
+ * Extension Manager/Repository config file for ext "static_info_tables_nl".
+ * Manual updates:
+ * Only the data in the array - everything else is removed by next
+ * writing. "version" and "dependencies" must not be touched!
+ ***************************************************************/
 
 $EM_CONF[$_EXTKEY] = [
     'title' => 'Static Info Tables (nl)',
     'description' => '(nl) language pack for the Static Info Tables providing localized names for countries, currencies and so on.',
     'category' => 'misc',
-    'shy' => 0,
-    'version' => '6.8.4',
-    'conflicts' => '',
-    'priority' => '',
-    'loadOrder' => '',
-    'module' => '',
+    'version' => '11.5.0',
     'state' => 'stable',
-    'uploadfolder' => 0,
+    'uploadfolder' => false,
     'createDirs' => '',
-    'clearcacheonload' => 0,
-    'lockType' => '',
+    'clearCacheOnLoad' => false,
     'author' => 'Ephraim Härer',
-    'author_email' => 'mail@ephra.im',
-    'author_company' => '',
-    'CGLcompliance' => '',
-    'CGLcompliance_note' => '',
+    'author_email' => 'ephraim.haerer@renolit.com',
+    'author_company' => 'RENOLIT SE',
     'constraints' => [
         'depends' => [
-            'static_info_tables' => '6.9.0-11.5.99',
-            'typo3' => '9.5.0-11.5.99',
+            'typo3' => '11.5.0-11.5.99',
+            'static_info_tables' => '11.5.0-11.5.99',
+            'extbase' => '11.5.0-11.5.99',
+            'extensionmanager' => '11.5.0-11.5.99',
         ],
-        'suggests' => [
-        ],
+        'conflicts' => [],
+        'suggests' => [],
     ],
 ];
