@@ -1,7 +1,9 @@
 <?php
+/** @noinspection PhpFullyQualifiedNameUsageInspection */
+
 defined('TYPO3_MODE') || die();
 
-call_user_func(function($extensionKey) {
+call_user_func(function ($extensionKey) {
     \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addTypoScriptSetup(
         '<INCLUDE_TYPOSCRIPT: source="FILE:EXT:' . $extensionKey . '/Configuration/TypoScript/Extbase/setup.typoscript">'
     );
